- Fix problem when the graph model details overflows causing the commands component   to be shifted off the screen

--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -1,6 +1,5 @@
 mapper-graph {
     display: block;
-    width: 95vw;
     height: 100%;
     overflow-y: auto !important;
     margin-left: 0 !important;
